[package]
name = "shuttle-rocket"
version = "0.53.0"
edition = "2021"
license = "Apache-2.0"
description = "Service implementation to run a rocket webserver on shuttle"
repository = "https://github.com/shuttle-hq/shuttle"
keywords = ["shuttle-service", "rocket"]

[workspace]

[dependencies]
shuttle-runtime = { path = "../../runtime", version = "0.53.0", default-features = false }

[dependencies.rocket]
git = "https://github.com/rwf2/Rocket.git"
branch = "master"
